# requests-flask-adapter

./: .travis.yml  LICENSE  README.md  setup.cfg  setup.py  tox.ini
requests_flask_adapter/: __init__.py  adapter.py  helpers.py
tests/: test_request.py
