[metadata]
name = requests-flask-adapter
author = See AUTHORS
author-email = maarten@adimian.com
summary = Adapter for requests session to access flask apps
description-file = README.md
long-description-content-type = text/markdown
home-page = https://github.com/maarten-dp/requests-flask-adapter
license = MIT/Expat
classifier =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
[files]
packages =
    requests_flask_adapter
[wheel]
universal = 1
